feat: before restructuring

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -11,5 +11,6 @@
 		BBOX & Bounding Box \\
 		GPX & GPS Exchange Format \\
 		XML & Extensible Markup Language \\
+		OSRM & Open Source Routing Machine \\
 	\end{tabular}
 \end{table}
